<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.liubaicai.android.acfun.MainActivity">
    <item
        android:id="@+id/action_user"
        android:orderInCategory="100"
        android:title="@string/action_user"
        app:showAsAction="never"
        android:icon="@drawable/ic_user"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_setting"/>
    <item
        android:id="@+id/action_164"
        android:orderInCategory="100"
        android:title="@string/action_164"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_75"
        android:orderInCategory="100"
        android:title="@string/action_75"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_74"
        android:orderInCategory="100"
        android:title="@string/action_74"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_73"
        android:orderInCategory="100"
        android:title="@string/action_73"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_110"
        android:orderInCategory="100"
        android:title="@string/action_110"
        app:showAsAction="never" />
</menu>
