<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="30dip"
        android:layout_marginTop="30dip"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/login_view_username_layout"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:background="@drawable/shape_login_def_input_layout"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/login_view_username_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8.0dip"
                    android:src="@drawable/icon_user_username" />

                <EditText
                    android:id="@+id/login_view_username_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/transparent"
                    android:hint="@string/login_view_username_hint_text"
                    android:inputType="none"
                    android:paddingRight="5.0dip"
                    android:singleLine="true"
                    android:textColor="@color/login_input_def_color"
                    android:textSize="15.0sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_view_password_layout"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="16.0dip"
                android:background="@drawable/shape_login_def_input_layout"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/login_view_password_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8.0dip"
                    android:src="@drawable/icon_user_password" />

                <EditText
                    android:id="@+id/login_view_password_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/transparent"
                    android:hint="@string/login_view_password_hint_text"
                    android:inputType="textPassword"
                    android:paddingRight="5.0dip"
                    android:singleLine="true"
                    android:textColor="@color/login_input_def_color"
                    android:textSize="15.0sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/login_view_validation_layout"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="16.0dip"
                android:background="@drawable/shape_login_def_input_layout"
                android:gravity="center_vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/login_view_validation_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="8.0dip"
                    android:src="@drawable/icon_user_yanzhengma" />

                <ImageView
                    android:id="@+id/login_view_validation_img"
                    android:layout_width="88.0dip"
                    android:layout_height="40.0dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5.0dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/image_error_heng" />

                <EditText
                    android:id="@+id/login_view_validation_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toLeftOf="@id/login_view_validation_img"
                    android:layout_toRightOf="@id/login_view_validation_icon"
                    android:background="@color/transparent"
                    android:hint="@string/regist_view_verification_code_hint_text"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textColor="@color/login_input_def_color"
                    android:textSize="15.0sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/login_view_login"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:layout_marginTop="16.0dip"
                android:background="@drawable/button_bg"
                android:text="@string/login_view_login_text"
                android:textColor="@color/white"
                android:textSize="18.0sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>